# mangekyo

./: Makefile  README.md  mangekyo.cabal  mgk.1
app/: Main.hs
man/: Makefile  mgk.1
src/: Mangekyo.hs
src/Mangekyo/: AST.hs  Builtin.hs  Conduit.hs  Interpreter.hs  Lens.hs  Parser.hs  Type.hs  Utils.hs
src/Mangekyo/Builtin/: Fmt.hs
src/Mangekyo/Conduit/: Csv.hs  JSON.hs  LTSV.hs  Line.hs  Null.hs  Word.hs
