name:                mangekyo
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/nakamuray/mangekyo#readme
license:             BSD2
license-file:        LICENSE
author:              NAKAMURA Yoshitaka
maintainer:          arumakanoy@gmail.com
copyright:           2017 NAKAMURA Yoshitaka
category:            Text
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Mangekyo
                     , Mangekyo.Conduit
                     , Mangekyo.Conduit.Csv
                     , Mangekyo.Conduit.JSON
                     , Mangekyo.Conduit.Line
                     , Mangekyo.Conduit.LTSV
                     , Mangekyo.Conduit.Null
                     , Mangekyo.Conduit.Word
                     , Mangekyo.Type
                     , Mangekyo.Lens
                     , Mangekyo.AST
                     , Mangekyo.Builtin
                     , Mangekyo.Builtin.Fmt
                     , Mangekyo.Interpreter
                     , Mangekyo.Parser
                     , Mangekyo.Utils
  other-modules:       Paths_mangekyo
  ghc-options:         -O2 -Wall
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , aeson-pretty
                     , attoparsec
                     , bytestring
                     , cassava
                     , cassava-conduit
                     , conduit
                     , conduit-extra
                     , containers
                     , data-default
                     , exceptions
                     , lens
                     , mtl
                     , parsers
                     , pcre-light
                     , process
                     , pretty-show
                     , scientific
                     , text
                     , trifecta
                     , unordered-containers
                     , utf8-string
                     , vector
  default-language:    Haskell2010

executable mgk
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -O2 -Wall
  build-depends:       base
                     , optparse-applicative
                     , mangekyo
  default-language:    Haskell2010

test-suite mangekyo-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , mangekyo
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/nakamuray/mangekyo
